--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Deploy with Docker Compose
         run: |
-            docker-compose -f docker-compose.yml up -d
+            docker compose -f docker-compose.yml up -d
   
 
 
