--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -3,8 +3,8 @@ name: Build and Publish ikebox infrastructure
 on:
   workflow_dispatch:
   push:
-   tags:
-      - '*'
+  #  tags:
+  #     - '*'
 
 jobs:
   build:
