--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,13 +44,12 @@ services:
   nginx:
     build:
       context: .
-      dockerfile: docker/Dockerfile-nginx
     container_name: nginx
     ports:
       - "${NGINX_PORT:-80}:80"
     volumes:
-      - ./docker/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./docker/nginx-logs:/var/log/nginx
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx-logs:/var/log/nginx
     depends_on:
       - nexus
     
