--- a/nginx.conf
+++ b/nginx.conf
@@ -40,6 +40,11 @@ http {
         listen 80;
         server_name localhost;
 
+         # JPro and app paths
+        location ~ ^/(jpro|app)/ {
+            proxy_pass http://komet:8080;
+        }
+
         # Nexus proxy
          # Path-based routing for Nexus
         location /nexus/ {
@@ -51,17 +56,29 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        # location /git/ {
-        #     client_max_body_size 512M;
-        #     proxy_pass http://gitea:3000/;
-        #     proxy_set_header Connection $http_connection;
-        #     proxy_set_header Upgrade $http_upgrade;
-        #     proxy_set_header Host $host;
-        #     proxy_set_header X-Real-IP $remote_addr;
-        #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        #     proxy_set_header X-Forwarded-Proto $scheme;
-        # }
+        location /git/ {
+            client_max_body_size 512M;
+            proxy_pass http://gitea:3000/;
+            proxy_set_header Connection $http_connection;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
 
+        location /komet/ {
+            proxy_pass  http://komet:8080/;
+            proxy_buffering    off;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-Proto $scheme;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   Host $http_host;
+            proxy_set_header   Upgrade $http_upgrade;
+            proxy_set_header   Connection "upgrade";
+            proxy_read_timeout 86400;
+            proxy_http_version 1.1;
+        }
     }
 
    
