readme and nginx config komet landing

--- a/nginx.conf
+++ b/nginx.conf
@@ -40,6 +40,12 @@ http {
         listen 80;
         server_name localhost;
 
+         location / {
+            proxy_pass http://komet:8080;
+            
+        }
+
+
          # JPro and app paths
         location ~ ^/(jpro|app)/ {
             proxy_pass http://komet:8080;
