--- a/nginx.conf
+++ b/nginx.conf
@@ -39,10 +39,10 @@ http {
     server {
         listen 80;
         server_name localhost;
-
+          # Serve index.html page
          location / {
-            proxy_pass http://komet:8080;
-            
+            root /usr/share/nginx/html;
+            index index.html;
         }
 
 
