--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,13 +65,16 @@ services:
     container_name: nginx
     ports:
       - "${NGINX_PORT:-80}:80"
+      - "443:443"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx-logs:/var/log/nginx
+      - certbot-data:/etc/letsencrypt
+      - certbot-webroot:/var/www/certbot
     depends_on:
       - nexus
       - komet
-    
+
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:${NGINX_PORT:-80}/"]
       interval: 30s
@@ -86,12 +89,25 @@ services:
         max-size: "10m"
         max-file: "3"
 
+  certbot:
+    image: certbot/certbot
+    container_name: certbot
+    volumes:
+      - certbot-data:/etc/letsencrypt
+      - certbot-webroot:/var/www/certbot
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot certonly --webroot --webroot-path=/var/www/certbot --email ${CERTBOT_EMAIL} --agree-tos --no-eff-email --staging -d localhost --non-interactive --keep-until-expiring; sleep 30d & wait $${!}; done;'"
+    networks:
+      - rapidenv
+    restart: always
+
 volumes:
   nexus-data:
   komet-data:
   nginx-logs:
     driver: bridge
   gitea_data:
+  certbot-data:
+  certbot-webroot:
 
 networks:
   rapidenv:
