--- a/nginx.conf
+++ b/nginx.conf
@@ -32,27 +32,60 @@ http {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
     proxy_set_header X-Forwarded-Host $host;
-    proxy_set_header X-Forwarded-Port 80;
+    proxy_set_header X-Forwarded-Port $server_port;
     proxy_buffering off;
     proxy_read_timeout 86400;
 
+    # HTTP server - redirects to HTTPS
     server {
         listen 80;
         server_name localhost;
-          # Serve index.html page
-         location / {
+
+        # Certbot webroot challenge
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
+
+        # Redirect all HTTP requests to HTTPS
+        location / {
+            return 301 https://$host$request_uri;
+        }
+    }
+
+    # HTTPS server
+    server {
+        listen 443 ssl;
+        server_name localhost;
+
+        # SSL certificates from certbot
+        ssl_certificate /etc/letsencrypt/live/localhost/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/localhost/privkey.pem;
+
+        # Handle case when certificates don't exist yet
+        error_page 497 https://$host$request_uri;
+
+        # SSL configuration
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_prefer_server_ciphers on;
+        ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
+        ssl_session_cache shared:SSL:10m;
+        ssl_session_timeout 1d;
+        ssl_stapling on;
+        ssl_stapling_verify on;
+
+        # Serve index.html page
+        location / {
             root /usr/share/nginx/html;
             index index.html;
         }
 
-
-         # JPro and app paths
+        # JPro and app paths
         location ~ ^/(jpro|app)/ {
             proxy_pass http://komet:8080;
         }
 
         # Nexus proxy
-         # Path-based routing for Nexus
+        # Path-based routing for Nexus
         location /nexus/ {
             proxy_pass http://nexus:8081/;
             rewrite ^/nexus/(.*) /$1 break;
@@ -87,5 +120,5 @@ http {
         }
     }
 
-   
+
 }
