--- a/subdomain/nginx.conf
+++ b/subdomain/nginx.conf
@@ -38,7 +38,7 @@ http {
 
     server {
         listen 80;
-        server_name www.ike.org;
+        server_name www.ikedesigns.com;
           # Serve index.html page
          location / {
             root /usr/share/nginx/html;
@@ -49,7 +49,7 @@ http {
         # Nexus proxy Path-based routing for Nexus
         server {
         listen 80;
-        server_name nexus.ike.org;
+        server_name nexus.ikedesigns.com;
         location / {
             proxy_pass http://nexus:8081;
             rewrite ^/nexus/(.*) /$1 break;
@@ -63,7 +63,7 @@ http {
      # Komet proxy Path-based routing for Komet subdomain
         server {
         listen 80;
-        server_name komet.ike.org;
+        server_name komet.ikedesigns.com;
         location / {
             proxy_pass  http://komet:8080/;
             proxy_buffering    off;
