--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -97,6 +97,7 @@ services:
   nginx-subdomain:
     build:
       context: .
+      dockerfile: Dockerfile-subdomain-web
     container_name: nginx-subdomain
     ports:
       - "${NGINX_PORT:-80}:80"
@@ -105,8 +106,8 @@ services:
       - ./nginx-logs:/var/log/nginx
     depends_on:
       - nexus
-      # - komet
-      # - gitea
+      - komet
+      - gitea
     networks:
       - rapidenv
     restart: always
