nginx config updated for subdomain

--- a/subdomain/nginx.conf
+++ b/subdomain/nginx.conf
@@ -36,15 +36,20 @@ http {
     proxy_buffering off;
     proxy_read_timeout 86400;
 
+# Proxy subdomain routing for website
+
     server {
-        listen 80;
-        server_name www.ikedesigns.com;
-          # Serve index.html page
-         location / {
-            root /usr/share/nginx/html;
-            index index.html;
-        }
+    listen 80;
+    server_name www.ikedesigns.com;
+
+    location / {
+        proxy_pass http://ikmdev-site:80;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
+}
 
         # Nexus proxy Path-based routing for Nexus
         server {
