--- a/subdomain/nginx.conf
+++ b/subdomain/nginx.conf
@@ -1,3 +1,4 @@
+worker_processess auto;
 events {
     worker_connections 1024;
 }
@@ -15,26 +16,6 @@ http {
 
     sendfile on;
     keepalive_timeout 65;
-
-    map $http_upgrade $connection_upgrade {
-        default upgrade;
-        '' close;
-    }
-
-    proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=my_cache:10m inactive=60m;
-
-    # Common proxy settings
-    proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection $connection_upgrade;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-    proxy_set_header X-Forwarded-Host $host;
-    proxy_set_header X-Forwarded-Port 80;
-    proxy_buffering off;
-    proxy_read_timeout 86400;
 
 # Proxy subdomain routing for website
 
@@ -70,15 +51,9 @@ http {
         server_name komet.ikedesigns.com;
         location / {
             proxy_pass  http://komet:8080/;
-            proxy_buffering    off;
             proxy_set_header   X-Real-IP $remote_addr;
-            proxy_set_header   X-Forwarded-Proto $scheme;
             proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header   Host $http_host;
-            proxy_set_header   Upgrade $http_upgrade;
-            proxy_set_header   Connection "upgrade";
-            proxy_read_timeout 86400;
-            proxy_http_version 1.1;
+            proxy_set_header   X-Forwarded-Proto $scheme;
         }
     }
 
