--- a/subdomain/nginx.conf
+++ b/subdomain/nginx.conf
@@ -33,8 +33,9 @@ http {
 
         # Nexus proxy Path-based routing for Nexus
         server {
-        listen 8081;
-        server_name nexus.ikedesigns.com;
+        listen 80;
+        # server_name nexus.ikedesigns.com;
+          server_name 3f301ea1e63f
         location / {
             proxy_pass http://nexus:8081;
             proxy_set_header Host $host;
