--- a/subdomain/nginx.conf
+++ b/subdomain/nginx.conf
@@ -35,7 +35,7 @@ http {
         server {
         listen 80;
         # server_name nexus.ikedesigns.com;
-          server_name 3f301ea1e63f
+        server_name _
         location / {
             proxy_pass http://nexus:8081;
             proxy_set_header Host $host;
