reaname compose script

--- a/subdomain/nginx.conf
+++ b/subdomain/nginx.conf
@@ -34,8 +34,7 @@ http {
         # Nexus proxy Path-based routing for Nexus
         server {
         listen 80;
-        # server_name nexus.ikedesigns.com;
-        server_name _
+        server_name nexus.ikedesigns.com;
         location / {
             proxy_pass http://nexus:8081;
             proxy_set_header Host $host;
