--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,6 +66,20 @@ services:
         max-size: "10m"
         max-file: "3"
     profiles: ["path-based"]
+  ikmdev-site:
+      image: ikebox/ikmdev-site:1.0.0
+      container_name: ikmdev-site
+      volumes:
+      - ikmdev-data:/data
+      networks:
+      - rapidenv
+      restart: unless-stopped
+      logging:
+       driver: "json-file"
+       options:
+        max-size: "10m"
+        max-file: "3"
+      profiles: ["subdomain"]
   
   nginx-subdomain:
     build:
@@ -80,6 +94,7 @@ services:
     depends_on:
       - nexus
       - komet
+      - ikmdev-site
     healthcheck:
       test: ["CMD-SHELL", "echo ok"]
       interval: 30s
@@ -94,22 +109,6 @@ services:
         max-size: "10m"
         max-file: "3"
     profiles: ["subdomain"]
-  ikmdev-site:
-     build:
-      context: .
-      dockerfile: Dockerfile-subdomain-web
-     container_name: ikmdev-site
-     volumes:
-      - ikmdev-data:/data
-     networks:
-      - rapidenv
-     restart: unless-stopped
-     logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "3"
-     profiles: ["subdomain"]
 volumes:
   nexus-data:
   komet-data:
