--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,11 +25,11 @@ services:
     volumes:
       - ~/Solor:/root/Solor
       - ./komet-data/users.ini:/root/Solor/users.ini:ro
-    # healthcheck:
-    #   test: ["CMD", "curl", "-f", "http://localhost:8080/status/alive"]
-    #   interval: 30s
-    #   timeout: 10s
-    #   retries: 3
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080/"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
     networks:
       - rapidenv
     restart: unless-stopped
@@ -71,6 +71,11 @@ services:
       container_name: ikmdev-site
       volumes:
       - ikmdev-data:/data
+      healthcheck:
+        test: ["CMD", "curl", "-f", "http://localhost/"]
+        interval: 30s
+        timeout: 10s
+        retries: 3
       networks:
       - rapidenv
       restart: unless-stopped
