--- a/subdomain/nginx.conf
+++ b/subdomain/nginx.conf
@@ -49,10 +49,11 @@ http {
         listen 80;
         server_name komet.ikedesigns.com;
         location / {
-            proxy_pass  http://komet:8080/;
-            proxy_set_header   X-Real-IP $remote_addr;
-            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header   X-Forwarded-Proto $scheme;
+            proxy_pass http://komet:8080;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
 
