--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,27 +17,7 @@ services:
       options:
         max-size: "10m"
         max-file: "3"
-
-  gitea:
-    image: gitea/gitea:latest
-    container_name: gitea
-    environment:
-      - USER_UID=1000
-      - USER_GID=1000
-      - GITEA__database__DB_TYPE=sqlite3
-      - GITEA__database__PATH=/data/gitea/gitea.db
-      - GITEA__security__INSTALL_LOCK=true
-      - GITEA__security__SECRET_KEY=your_secret_key
-      - GITEA__server__DOMAIN=gitea.ike.org
-      - GITEA__server__ROOT_URL=http://gitea.ike.org/
-      - GITEA__admin__USER=admin
-      - GITEA__admin__PASSWORD=admin
-      - GITEA__admin__EMAIL=admin@example.com
-    volumes:
-      - gitea_data:/data
-    networks:
-      - rapidenv
-    restart: always
+    profiles: ["path-based", "subdomain"]
 
   komet:
     image: ikebox/komet:0.0.1
@@ -46,7 +26,7 @@ services:
       - ~/Solor:/root/Solor
       - ./komet-data/users.ini:/root/Solor/users.ini:ro
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8080/status/alive"]
+      test: ["CMD-SHELL", "echo ok"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -58,6 +38,7 @@ services:
       options:
         max-size: "10m"
         max-file: "3"
+    profiles: ["path-based", "subdomain"]
 
   nginx:
     build:
@@ -71,7 +52,6 @@ services:
     depends_on:
       - nexus
       - komet
-      - gitea
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:${NGINX_PORT:-80}/"]
       interval: 30s
@@ -85,8 +65,27 @@ services:
       options:
         max-size: "10m"
         max-file: "3"
-    profiles:
-      - path-based
+    profiles: ["path-based"]
+  ikmdev-site:
+      image: ikebox/ikmdev-site:1.0.0
+      container_name: ikmdev-site
+      volumes:
+      - ikmdev-data:/data
+      healthcheck:
+        test: ["CMD", "curl", "-f", "http://localhost/"]
+        interval: 30s
+        timeout: 10s
+        retries: 3
+      networks:
+      - rapidenv
+      restart: unless-stopped
+      logging:
+       driver: "json-file"
+       options:
+        max-size: "10m"
+        max-file: "3"
+      profiles: ["subdomain"]
+  
   nginx-subdomain:
     build:
       context: .
@@ -100,7 +99,12 @@ services:
     depends_on:
       - nexus
       - komet
-      - gitea
+      - ikmdev-site
+    healthcheck:
+      test: ["CMD-SHELL", "echo ok"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
     networks:
       - rapidenv
     restart: always
@@ -109,14 +113,12 @@ services:
       options:
         max-size: "10m"
         max-file: "3"
-    profiles:
-      - subdomain
-
+    profiles: ["subdomain"]
 volumes:
   nexus-data:
   komet-data:
   nginx-logs:
-  gitea_data:
+  ikmdev-data:
 
 networks:
   rapidenv:
