--- a/subdomain/nginx.conf
+++ b/subdomain/nginx.conf
@@ -16,35 +16,20 @@ http {
     sendfile on;
     keepalive_timeout 65;
 
-    map $http_upgrade $connection_upgrade {
-        default upgrade;
-        '' close;
-    }
-
-    proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=my_cache:10m inactive=60m;
-
-    # Common proxy settings
-    proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection $connection_upgrade;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-    proxy_set_header X-Forwarded-Host $host;
-    proxy_set_header X-Forwarded-Port 80;
-    proxy_buffering off;
-    proxy_read_timeout 86400;
+# Proxy subdomain routing for website
 
     server {
-        listen 80;
-        server_name www.ikedesigns.com;
-          # Serve index.html page
-         location / {
-            root /usr/share/nginx/html;
-            index index.html;
-        }
+    listen 80;
+    server_name www.ikedesigns.com;
+
+    location / {
+        proxy_pass http://ikmdev-site:80;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
+}
 
         # Nexus proxy Path-based routing for Nexus
         server {
@@ -52,7 +37,6 @@ http {
         server_name nexus.ikedesigns.com;
         location / {
             proxy_pass http://nexus:8081;
-            rewrite ^/nexus/(.*) /$1 break;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -65,16 +49,11 @@ http {
         listen 80;
         server_name komet.ikedesigns.com;
         location / {
-            proxy_pass  http://komet:8080/;
-            proxy_buffering    off;
-            proxy_set_header   X-Real-IP $remote_addr;
-            proxy_set_header   X-Forwarded-Proto $scheme;
-            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header   Host $http_host;
-            proxy_set_header   Upgrade $http_upgrade;
-            proxy_set_header   Connection "upgrade";
-            proxy_read_timeout 86400;
-            proxy_http_version 1.1;
+            proxy_pass http://komet:8080;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
 
