--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,27 +17,7 @@ services:
       options:
         max-size: "10m"
         max-file: "3"
-
-  gitea:
-    image: gitea/gitea:latest
-    container_name: gitea
-    environment:
-      - USER_UID=1000
-      - USER_GID=1000
-      - GITEA__database__DB_TYPE=sqlite3
-      - GITEA__database__PATH=/data/gitea/gitea.db
-      - GITEA__security__INSTALL_LOCK=true
-      - GITEA__security__SECRET_KEY=your_secret_key
-      - GITEA__server__DOMAIN=gitea.ike.org
-      - GITEA__server__ROOT_URL=http://gitea.ike.org/
-      - GITEA__admin__USER=admin
-      - GITEA__admin__PASSWORD=admin
-      - GITEA__admin__EMAIL=admin@example.com
-    volumes:
-      - gitea_data:/data
-    networks:
-      - rapidenv
-    restart: always
+    profiles: ["path-based", "subdomain"]
 
   komet:
     image: ikebox/komet:0.0.1
@@ -65,20 +45,12 @@ services:
     container_name: nginx
     ports:
       - "${NGINX_PORT:-80}:80"
-      - "443:443"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx-logs:/var/log/nginx
-      - certbot-data:/etc/letsencrypt
-      - certbot-webroot:/var/www/certbot
     depends_on:
       - nexus
       - komet
-<<<<<<< HEAD
-
-=======
-      - gitea
->>>>>>> 95b566d ( added new nginx config and compose script updated)
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:${NGINX_PORT:-80}/"]
       interval: 30s
@@ -119,24 +91,11 @@ services:
     profiles:
       - subdomain
 
-  certbot:
-    image: certbot/certbot
-    container_name: certbot
-    volumes:
-      - certbot-data:/etc/letsencrypt
-      - certbot-webroot:/var/www/certbot
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot certonly --webroot --webroot-path=/var/www/certbot --email ${CERTBOT_EMAIL} --agree-tos --no-eff-email --staging -d localhost --non-interactive --keep-until-expiring; sleep 30d & wait $${!}; done;'"
-    networks:
-      - rapidenv
-    restart: always
-
 volumes:
   nexus-data:
   komet-data:
   nginx-logs:
   gitea_data:
-  certbot-data:
-  certbot-webroot:
 
 networks:
   rapidenv:
