--- a/subdomain/nginx.conf
+++ b/subdomain/nginx.conf
@@ -48,12 +48,17 @@ http {
         server {
         listen 80;
         server_name komet.ikedesigns.com;
-        location / {
-            proxy_pass http://komet:8080;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+         location / {
+            proxy_pass  http://komet:8080/;
+            proxy_buffering    off;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-Proto $scheme;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   Host $http_host;
+            proxy_set_header   Upgrade $http_upgrade;
+            proxy_set_header   Connection "upgrade";
+            proxy_read_timeout 86400;
+            proxy_http_version 1.1;
         }
     }
 
