--- a/Dockerfile-subdomain-web
+++ b/Dockerfile-subdomain-web
@@ -1,2 +1,16 @@
 FROM nginx:1.26.3
+
+# Install OpenSSL for certificate generation
+RUN apt-get update && apt-get install -y openssl && rm -rf /var/lib/apt/lists/*
+
+# Copy files
 COPY ./subdomain/nginx.conf /etc/nginx/nginx.conf
+COPY docker-entrypoint.sh /docker-entrypoint.sh
+
+
+
+# Make entrypoint script executable
+RUN chmod +x /docker-entrypoint.sh
+
+# Set entrypoint
+ENTRYPOINT ["/docker-entrypoint.sh"]
