--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,6 +46,7 @@ services:
     container_name: nginx
     ports:
       - "${NGINX_PORT:-80}:80"
+      - "${NGINX_PORT:-443}:443"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx-logs:/var/log/nginx
@@ -93,6 +94,7 @@ services:
     container_name: nginx-subdomain
     ports:
       - "${NGINX_PORT:-80}:80"
+      - "${NGINX_PORT:-443}:443"
     volumes:
       - ./subdomain/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx-logs:/var/log/nginx
