--- a/subdomain/nginx.conf
+++ b/subdomain/nginx.conf
@@ -22,6 +22,38 @@ http {
     listen 80;
     server_name www.ikedesigns.com;
 
+         # Certbot webroot challenge
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
+    
+    
+        # Redirect all HTTP requests to HTTPS
+        location / {
+            return 301 https://$host$request_uri;
+        }
+    }
+     # HTTPS server
+    server {
+        listen 443 ssl;
+        server_name www.ikedesigns.com;
+
+        # SSL certificates from certbot
+        ssl_certificate /etc/letsencrypt/live/localhost/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/localhost/privkey.pem;
+
+        # Handle case when certificates don't exist yet
+        error_page 497 https://$host$request_uri;
+
+        # SSL configuration
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_prefer_server_ciphers on;
+        ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
+        ssl_session_cache shared:SSL:10m;
+        ssl_session_timeout 1d;
+        ssl_stapling on;
+        ssl_stapling_verify on;
+
     location / {
         proxy_pass http://ikmdev-site:80;
         proxy_set_header Host $host;
@@ -35,6 +67,39 @@ http {
         server {
         listen 80;
         server_name nexus.ikedesigns.com;
+
+          # Certbot webroot challenge
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
+    
+    
+        # Redirect all HTTP requests to HTTPS
+        location / {
+            return 301 https://$host$request_uri;
+        }
+    }
+     # HTTPS server
+    server {
+        listen 443 ssl;
+        server_name nexus.ikedesigns.com;
+
+        # SSL certificates from certbot
+        ssl_certificate /etc/letsencrypt/live/localhost/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/localhost/privkey.pem;
+
+        # Handle case when certificates don't exist yet
+        error_page 497 https://$host$request_uri;
+
+        # SSL configuration
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_prefer_server_ciphers on;
+        ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
+        ssl_session_cache shared:SSL:10m;
+        ssl_session_timeout 1d;
+        ssl_stapling on;
+        ssl_stapling_verify on;
+
         location / {
             proxy_pass http://nexus:8081;
             proxy_set_header Host $host;
@@ -48,6 +113,39 @@ http {
         server {
         listen 80;
         server_name komet.ikedesigns.com;
+
+          # Certbot webroot challenge
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
+    
+    
+        # Redirect all HTTP requests to HTTPS
+        location / {
+            return 301 https://$host$request_uri;
+        }
+    }
+     # HTTPS server
+    server {
+        listen 443 ssl;
+        server_name komet.ikedesigns.com;
+
+        # SSL certificates from certbot
+        ssl_certificate /etc/letsencrypt/live/localhost/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/localhost/privkey.pem;
+
+        # Handle case when certificates don't exist yet
+        error_page 497 https://$host$request_uri;
+
+        # SSL configuration
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_prefer_server_ciphers on;
+        ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
+        ssl_session_cache shared:SSL:10m;
+        ssl_session_timeout 1d;
+        ssl_stapling on;
+        ssl_stapling_verify on;
+
          location / {
             proxy_pass  http://komet:8080/;
             proxy_buffering    off;
