ssl-cert-https localhost replaced

--- a/subdomain/nginx.conf
+++ b/subdomain/nginx.conf
@@ -39,8 +39,8 @@ http {
         server_name www.ikedesigns.com;
 
         # SSL certificates from certbot
-        ssl_certificate /etc/letsencrypt/live/localhost/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/localhost/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/www.ikedesigns.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/www.ikedesigns.com/privkey.pem;
 
         # Handle case when certificates don't exist yet
         error_page 497 https://$host$request_uri;
@@ -85,8 +85,8 @@ http {
         server_name nexus.ikedesigns.com;
 
         # SSL certificates from certbot
-        ssl_certificate /etc/letsencrypt/live/localhost/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/localhost/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/nexus.ikedesigns.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/nexus.ikedesigns.com/privkey.pem;
 
         # Handle case when certificates don't exist yet
         error_page 497 https://$host$request_uri;
@@ -131,8 +131,8 @@ http {
         server_name komet.ikedesigns.com;
 
         # SSL certificates from certbot
-        ssl_certificate /etc/letsencrypt/live/localhost/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/localhost/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/komet.ikedesigns.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/komet.ikedesigns.com/privkey.pem;
 
         # Handle case when certificates don't exist yet
         error_page 497 https://$host$request_uri;
