--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -116,11 +116,23 @@ services:
         max-size: "10m"
         max-file: "3"
     profiles: ["subdomain"]
+  certbot:
+    image: certbot/certbot
+    container_name: certbot
+    volumes:
+      - certbot-data:/etc/letsencrypt
+      - certbot-webroot:/var/www/certbot
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot certonly --webroot --webroot-path=/var/www/certbot --email admin@example.com --agree-tos --no-eff-email --staging -d ${CERTBOT_HOST} --non-interactive --keep-until-expiring; sleep 30d & wait $${!}; done;'"
+    networks:
+      - rapidenv
+    restart: always
 volumes:
   nexus-data:
   komet-data:
   nginx-logs:
   ikmdev-data:
+  certbot-data:
+  certbot-webroot:
 
 networks:
   rapidenv:
