--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -122,7 +122,7 @@ services:
     image: certbot/certbot
     container_name: certbot
     environment: 
-      - CERTBOT_HOST=*.ikedesigns.com"
+      - CERTBOT_HOST="*.ikedesigns.com"
     volumes:
       - certbot-data:/etc/letsencrypt
       - certbot-webroot:/var/www/certbot
