--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -103,6 +103,7 @@ services:
       - "${NGINX_PORT:-443}:443"
     volumes:
       - ./subdomain/nginx.conf:/etc/nginx/nginx.conf:ro
+      - /etc/letsencrypt:/etc/letsencrypt:ro
       - ./nginx-logs:/var/log/nginx
     depends_on:
       - nexus
