--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -96,15 +96,15 @@ services:
       dockerfile: Dockerfile-subdomain-web
     container_name: nginx-subdomain
     environment: 
-      - CERTBOT_HOST="*.ikedesigns.com"
+      - DOMAINS= *.ikedesigns.com
 
     ports:
       - "${NGINX_PORT:-80}:80"
       - "${NGINX_PORT:-443}:443"
     volumes:
       - ./subdomain/nginx.conf:/etc/nginx/nginx.conf:ro
-      - /etc/letsencrypt:/etc/letsencrypt:ro
-      - ./nginx-logs:/var/log/nginx
+      - ./certbot/www:/var/www/certbot
+      - ./certbot/conf:/etc/letsencrypt
     depends_on:
       - nexus
       - komet
@@ -130,7 +130,7 @@ services:
     volumes:
       - certbot-data:/etc/letsencrypt
       - certbot-webroot:/var/www/certbot
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot certonly --webroot --webroot-path=/var/www/certbot --email admin@example.com --agree-tos --no-eff-email --staging -d ${CERTBOT_HOST} --non-interactive --keep-until-expiring; sleep 30d & wait $${!}; done;'"
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot certonly --webroot --webroot-path=/var/www/certbot --email devops@ikm.dev --agree-tos --no-eff-email --staging -d ${DOMAINS} --non-interactive --keep-until-expiring; sleep 30d & wait $${!}; done;'"
     networks:
       - rapidenv
     restart: always
