--- a/subdomain/nginx.conf
+++ b/subdomain/nginx.conf
@@ -38,10 +38,11 @@ http {
         listen 443 ssl;
         server_name www.ikedesigns.com;
 
+        
         # SSL certificates from certbot
-        ssl_certificate $CERT_PATH/fullchain.pem;
-        ssl_certificate_key $CERT_PATH/privkey.pem;
-
+        ssl_certificate /etc/letsencrypt/live/${DOMAIN}/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/${DOMAIN}/privkey.pem;
+        
         # Handle case when certificates don't exist yet
         error_page 497 https://$host$request_uri;
 
@@ -84,10 +85,11 @@ http {
         listen 443 ssl;
         server_name nexus.ikedesigns.com;
 
-        # SSL certificates from certbot
-        ssl_certificate $CERT_PATH/fullchain.pem;
-        ssl_certificate_key $CERT_PATH/privkey.pem;
+       # SSL certificates from certbot
+        ssl_certificate /etc/letsencrypt/live/${DOMAIN}/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/${DOMAIN}/privkey.pem;
 
+        
         # Handle case when certificates don't exist yet
         error_page 497 https://$host$request_uri;
 
@@ -130,9 +132,10 @@ http {
         listen 443 ssl;
         server_name komet.ikedesigns.com;
 
-        # SSL certificates from certbot
-        ssl_certificate $CERT_PATH/fullchain.pem;
-        ssl_certificate_key $CERT_PATH/privkey.pem;
+           # SSL certificates from certbot
+        ssl_certificate /etc/letsencrypt/live/${DOMAIN}/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/${DOMAIN}/privkey.pem;
+        
 
         # Handle case when certificates don't exist yet
         error_page 497 https://$host$request_uri;
