wildcard ssl cert path

--- a/subdomain/nginx.conf
+++ b/subdomain/nginx.conf
@@ -40,8 +40,8 @@ http {
 
         
         # SSL certificates from certbot
-        ssl_certificate /etc/letsencrypt/live/www.ikedesigns.com/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/www.ikedesigns.com/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/ikedesigns.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/ikedesigns.com/privkey.pem;
         
         # Handle case when certificates don't exist yet
         error_page 497 https://$host$request_uri;
@@ -86,8 +86,8 @@ http {
         server_name nexus.ikedesigns.com;
 
        # SSL certificates from certbot
-        ssl_certificate /etc/letsencrypt/live/nexus.ikedesigns.com/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/nexus.ikedesigns.com/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/ikedesigns.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/ikedesigns.com/privkey.pem;
 
         
         # Handle case when certificates don't exist yet
@@ -133,8 +133,8 @@ http {
         server_name komet.ikedesigns.com;
 
            # SSL certificates from certbot
-        ssl_certificate /etc/letsencrypt/live/komet.ikedesigns.com/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/komet.ikedesigns.com/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/ikedesigns.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/ikedesigns.com/privkey.pem;
         
 
         # Handle case when certificates don't exist yet
