nginx config duplicate blcoks removed

--- a/subdomain/nginx.conf
+++ b/subdomain/nginx.conf
@@ -20,7 +20,7 @@ http {
 
     server {
     listen 80;
-    server_name www.ikedesigns.com;
+    server_name www.ikedesigns.com nexus.ikedesigns.com komet.ikedesigns.com;
 
          # Certbot webroot challenge
         location /.well-known/acme-challenge/ {
@@ -36,12 +36,12 @@ http {
      # HTTPS server
     server {
         listen 443 ssl;
-        server_name www.ikedesigns.com;
+        server_name www.ikedesigns.com nexus.ikedesigns.com komet.ikedesigns.com;
 
         
         # SSL certificates from certbot
-        ssl_certificate /etc/letsencrypt/live/ikedesigns.com/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/ikedesigns.com/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/'"*.ikedesigns.com"'/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/'"*.ikedesigns.com"'/privkey.pem;
         
         # Handle case when certificates don't exist yet
         error_page 497 https://$host$request_uri;
@@ -62,94 +62,16 @@ http {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
-}
 
-        # Nexus proxy Path-based routing for Nexus
-        server {
-        listen 80;
-        server_name nexus.ikedesigns.com;
-
-          # Certbot webroot challenge
-        location /.well-known/acme-challenge/ {
-            root /var/www/certbot;
-        }
-    
-    
-        # Redirect all HTTP requests to HTTPS
-        location / {
-            return 301 https://$host$request_uri;
-        }
-    }
-     # HTTPS server
-    server {
-        listen 443 ssl;
-        server_name nexus.ikedesigns.com;
-
-       # SSL certificates from certbot
-        ssl_certificate /etc/letsencrypt/live/ikedesigns.com/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/ikedesigns.com/privkey.pem;
-
-        
-        # Handle case when certificates don't exist yet
-        error_page 497 https://$host$request_uri;
-
-        # SSL configuration
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_prefer_server_ciphers on;
-        ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
-        ssl_session_cache shared:SSL:10m;
-        ssl_session_timeout 1d;
-        ssl_stapling on;
-        ssl_stapling_verify on;
-
-        location / {
+    location / {
             proxy_pass http://nexus:8081;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
-    }
-    
-     # Komet proxy Path-based routing for Komet subdomain
-        server {
-        listen 80;
-        server_name komet.ikedesigns.com;
 
-          # Certbot webroot challenge
-        location /.well-known/acme-challenge/ {
-            root /var/www/certbot;
-        }
-    
-    
-        # Redirect all HTTP requests to HTTPS
-        location / {
-            return 301 https://$host$request_uri;
-        }
-    }
-     # HTTPS server
-    server {
-        listen 443 ssl;
-        server_name komet.ikedesigns.com;
-
-           # SSL certificates from certbot
-        ssl_certificate /etc/letsencrypt/live/ikedesigns.com/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/ikedesigns.com/privkey.pem;
-        
-
-        # Handle case when certificates don't exist yet
-        error_page 497 https://$host$request_uri;
-
-        # SSL configuration
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_prefer_server_ciphers on;
-        ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
-        ssl_session_cache shared:SSL:10m;
-        ssl_session_timeout 1d;
-        ssl_stapling on;
-        ssl_stapling_verify on;
-
-         location / {
+    location / {
             proxy_pass  http://komet:8080/;
             proxy_buffering    off;
             proxy_set_header   X-Real-IP $remote_addr;
@@ -161,7 +83,16 @@ http {
             proxy_read_timeout 86400;
             proxy_http_version 1.1;
         }
-    }
+
+}
+
+      
+}
+    
+
+    
+
+        
+    
 
    
-}
