--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -96,8 +96,7 @@ services:
       dockerfile: Dockerfile-subdomain-web
     container_name: nginx-subdomain
     environment: 
-      - DOMAINS= *.ikedesigns.com
-
+      - DOMAINS= ikedesigns.com
     ports:
       - "${NGINX_PORT:-80}:80"
       - "${NGINX_PORT:-443}:443"
