--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -96,7 +96,7 @@ services:
       dockerfile: Dockerfile-subdomain-web
     container_name: nginx-subdomain
     environment: 
-      - DOMAINS= ikedesigns.com
+      - DOMAINS= www.ikedesigns.com,komet.ikedesigns.com,nexus.ikedesigns.com
     ports:
       - "${NGINX_PORT:-80}:80"
       - "${NGINX_PORT:-443}:443"
@@ -127,8 +127,9 @@ services:
     image: certbot/certbot
     container_name: certbot
     volumes:
-      - certbot-data:/etc/letsencrypt
-      - certbot-webroot:/var/www/certbot
+      - ./certbot/www:/var/www/certbot
+      - ./certbot/conf:/etc/letsencrypt
+      
     entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot certonly --webroot --webroot-path=/var/www/certbot --email devops@ikm.dev --agree-tos --no-eff-email --staging -d ${DOMAINS} --non-interactive --keep-until-expiring; sleep 30d & wait $${!}; done;'"
     networks:
       - rapidenv
