--- a/subdomain/nginx.conf
+++ b/subdomain/nginx.conf
@@ -36,8 +36,8 @@ http {
         listen 443 ssl;
         server_name www.ikedesigns.com;
 
-        ssl_certificate     /etc/letsencrypt/live/ikedesigns.com/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/ikedesigns.com/privkey.pem;
+        ssl_certificate     /etc/letsencrypt/live/www.ikedesigns.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/www.ikedesigns.com/privkey.pem;
 
         error_page 497 https://$host$request_uri;
 
@@ -64,8 +64,8 @@ http {
         listen 443 ssl;
         server_name nexus.ikedesigns.com;
 
-        ssl_certificate     /etc/letsencrypt/live/ikedesigns.com/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/ikedesigns.com/privkey.pem;
+        ssl_certificate     /etc/letsencrypt/live/nexus.ikedesigns.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/nexus.ikedesigns.com;/privkey.pem;
 
         error_page 497 https://$host$request_uri;
 
@@ -92,8 +92,8 @@ http {
         listen 443 ssl;
         server_name komet.ikedesigns.com;
 
-        ssl_certificate     /etc/letsencrypt/live/ikedesigns.com/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/ikedesigns.com/privkey.pem;
+        ssl_certificate     /etc/letsencrypt/live/komet.ikedesigns.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/komet.ikedesigns.com/privkey.pem;
 
         error_page 497 https://$host$request_uri;
 
