--- a/subdomain/nginx.conf
+++ b/subdomain/nginx.conf
@@ -65,7 +65,7 @@ http {
         server_name nexus.ikedesigns.com;
 
         ssl_certificate     /etc/letsencrypt/live/nexus.ikedesigns.com/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/nexus.ikedesigns.com;/privkey.pem;
+        ssl_certificate_key /etc/letsencrypt/live/nexus.ikedesigns.com/privkey.pem;
 
         error_page 497 https://$host$request_uri;
 
