--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,14 +44,16 @@ services:
     build:
       context: .
     container_name: nginx
-    # environment:
-    #   - CERTBOT_HOST="localhost,www.ikedesigns.com,komet.ikedesigns.com,nexus.ikedesigns.com"
+    environment:
+      - DOMAINS='*.ikedesigns.com'
     ports:
       - "${NGINX_PORT:-80}:80"
       - "${NGINX_PORT:-443}:443"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx-logs:/var/log/nginx
+      - ./certbot/www:/var/www/certbot
+      - ./certbot/conf:/etc/letsencrypt
     depends_on:
       - nexus
       - komet
@@ -70,6 +72,7 @@ services:
         max-size: "10m"
         max-file: "3"
     profiles: ["path-based"]
+
   ikmdev-site:
       image: ikebox/ikmdev-site:1.0.0
       container_name: ikmdev-site
@@ -89,14 +92,12 @@ services:
         max-size: "10m"
         max-file: "3"
       profiles: ["subdomain"]
-  
+
   nginx-subdomain:
     build:
       context: .
       dockerfile: Dockerfile-subdomain-web
     container_name: nginx-subdomain
-    environment: 
-      - DOMAINS= www.ikedesigns.com,komet.ikedesigns.com,nexus.ikedesigns.com
     ports:
       - "${NGINX_PORT:-80}:80"
       - "${NGINX_PORT:-443}:443"
@@ -123,13 +124,16 @@ services:
         max-size: "10m"
         max-file: "3"
     profiles: ["subdomain"]
+
   certbot:
     image: certbot/certbot
     container_name: certbot
+    environment:
+      - DOMAINS='*.ikedesigns.com'
     volumes:
       - ./certbot/www:/var/www/certbot
       - ./certbot/conf:/etc/letsencrypt
-      
+
     entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot certonly --webroot --webroot-path=/var/www/certbot --email devops@ikm.dev --agree-tos --no-eff-email --staging -d ${DOMAINS} --non-interactive --keep-until-expiring; sleep 30d & wait $${!}; done;'"
     networks:
       - rapidenv
