updates to handle recreation of certs and centralizes subdomain creation

--- a/.gitignore
+++ b/.gitignore
@@ -229,3 +229,13 @@ Temporary Items
 ###################
 **.zip
 htmlReport
+
+###################
+# Docker specific
+###################
+docker/
+
+###################
+# Certbot specific
+###################
+certbot/
