--- a/Dockerfile-subdomain-web
+++ b/Dockerfile-subdomain-web
@@ -1,7 +1,14 @@
 FROM nginx:1.26.3
 
-# Install OpenSSL for certificate generation
-RUN apt-get update && apt-get install -y openssl && rm -rf /var/lib/apt/lists/*
+# Install OpenSSL for certificate generation and envsubst for template processing
+RUN apt-get update && apt-get install -y openssl gettext-base && rm -rf /var/lib/apt/lists/*
 
 # Copy files
-COPY ./subdomain/nginx.conf /etc/nginx/nginx.conf
+COPY ./subdomain/nginx.conf.template /etc/nginx/nginx.conf.template
+COPY docker-entrypoint-subdomain.sh /docker-entrypoint.sh
+
+# Make entrypoint script executable
+RUN chmod +x /docker-entrypoint.sh
+
+# Set entrypoint
+ENTRYPOINT ["/docker-entrypoint.sh"]
