--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,7 +45,7 @@ services:
       context: .
     container_name: nginx
     environment:
-      - DOMAINS='*.ikedesigns.com'
+      - DOMAINS=${NGINX_DOMAINS}
     ports:
       - "${NGINX_PORT:-80}:80"
       - "${NGINX_PORT:-443}:443"
@@ -91,7 +91,7 @@ services:
        options:
         max-size: "10m"
         max-file: "3"
-      profiles: ["subdomain"]
+      profiles: ["path-based", "subdomain"]
 
   nginx-subdomain:
     build:
@@ -111,7 +111,7 @@ services:
       - ikmdev-site
       - certbot
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://www.ikedesigns.com"]
+      test: ["CMD", "curl", "-f", "http://${WWW_SUBDOMAIN}"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -129,15 +129,25 @@ services:
     image: certbot/certbot
     container_name: certbot
     environment:
-      - DOMAINS='*.ikedesigns.com'
+      - DOMAINS=${CERTBOT_DOMAINS}
     volumes:
       - ./certbot/www:/var/www/certbot
       - ./certbot/conf:/etc/letsencrypt
-
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot certonly --webroot --webroot-path=/var/www/certbot --email devops@ikm.dev --agree-tos --no-eff-email --staging -d www.ikedesigns.com --non-interactive --keep-until-expiring; sleep 30d & wait $${!}; done;'"
+    entrypoint: "/bin/sh -c '\
+      trap exit TERM; \
+      while :; do \
+        for domain in $$(echo $$DOMAINS | sed \"s/'//g\" | tr ',' ' '); do \
+          certbot certonly --webroot --webroot-path=/var/www/certbot \
+            --email devops@ikm.dev --agree-tos --no-eff-email \
+            -d $$domain --non-interactive --keep-until-expiring; \
+        done; \
+        certbot renew --webroot --webroot-path=/var/www/certbot --non-interactive; \
+        sleep 12h & wait $${!}; \
+      done;'"
     networks:
       - rapidenv
-    restart: always
+    restart: unless-stopped
+
 volumes:
   nexus-data:
   komet-data:
