--- a/Dockerfile-subdomain-web
+++ b/Dockerfile-subdomain-web
@@ -5,7 +5,7 @@ RUN apt-get update && apt-get install -y openssl gettext-base && rm -rf /var/lib
 
 # Copy files
 COPY ./subdomain/nginx.conf.template /etc/nginx/nginx.conf.template
-COPY docker-entrypoint-subdomain.sh /docker-entrypoint.sh
+COPY subdomain/entrypoint.sh /docker-entrypoint.sh
 
 # Make entrypoint script executable
 RUN chmod +x /docker-entrypoint.sh
