--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -133,17 +133,8 @@ services:
     volumes:
       - ./certbot/www:/var/www/certbot
       - ./certbot/conf:/etc/letsencrypt
-    entrypoint: "/bin/sh -c '\
-      trap exit TERM; \
-      while :; do \
-        for domain in $$(echo $$DOMAINS | sed \"s/'//g\" | tr ',' ' '); do \
-          certbot certonly --webroot --webroot-path=/var/www/certbot \
-            --email devops@ikm.dev --agree-tos --no-eff-email \
-            -d $$domain --non-interactive --keep-until-expiring; \
-        done; \
-        certbot renew --webroot --webroot-path=/var/www/certbot --non-interactive; \
-        sleep 12h & wait $${!}; \
-      done;'"
+      - ./certbot-entrypoint.sh:/certbot-entrypoint.sh:ro
+    entrypoint: "/certbot-entrypoint.sh"
     networks:
       - rapidenv
     restart: unless-stopped
