so many changes...

--- a/.env
+++ b/.env
@@ -1,13 +1,12 @@
 # Domain configuration
-BASE_DOMAIN=ikedesigns.com
-WWW_SUBDOMAIN=www.${BASE_DOMAIN}
-NEXUS_SUBDOMAIN=nexus.${BASE_DOMAIN}
-KOMET_SUBDOMAIN=komet.${BASE_DOMAIN}
-IKMDEV_SUBDOMAIN=ikmdev.${BASE_DOMAIN}
+BASE_DOMAIN="ikedesigns.com"
+TARGET_IP="18.119.11.183"
 
-# Combined domain lists for services
-NGINX_DOMAINS="*.${BASE_DOMAIN}"
-CERTBOT_DOMAINS="${BASE_DOMAIN},${WWW_SUBDOMAIN},${NEXUS_SUBDOMAIN},${KOMET_SUBDOMAIN},${IKMDEV_SUBDOMAIN}"
+# Fill in after executing the certbot initialization script
+ACME_CHALLENGE=""
 
-# Other configuration
-NGINX_PORT=80
+# Do not change these unless you know what you're doing
+WWW_SUBDOMAIN="www.${BASE_DOMAIN}"
+NEXUS_SUBDOMAIN="nexus.${BASE_DOMAIN}"
+KOMET_SUBDOMAIN="komet.${BASE_DOMAIN}"
+
