--- a/dns-management/aws-domain-registration/Dockerfile
+++ b/dns-management/aws-domain-registration/Dockerfile
@@ -6,8 +6,8 @@ WORKDIR /app
 RUN pip install --no-cache-dir requests
 
 # Copy scripts and configuration files
-COPY ../easy-dns-domain-registration/create_domains.py delete_domains.py /app/
-COPY ../easy-dns-domain-registration/config.json domains.txt /app/
+COPY create_domains.py delete_domains.py /app/
+COPY ../config.json domains.txt /app/
 
 # Make scripts executable
 RUN chmod +x /app/create_domains.py /app/delete_domains.py
